# hw1_comp_geo_problem_1

./: CMakeLists.txt  convexImplementations.h  kdtree.h  main.cpp  polygonalTriangulationImplementations.h  rangetree.h
